--- a/搭建节点.md
+++ b/搭建节点.md
@@ -51,8 +51,8 @@ yarn cli wallet-init
 ```
 yarn cli mint-dft atom --satsbyte 30
 ```
-'atom'指铸造的代币名称，根据实际情况修改
-'--satsbyte 30' 是设置的gas，注意这里设置的gas，与实际上链的gas是1.8~2倍的关系，比如这里设置30，实际上链gas是54~60sats/vB。
+- 'atom'指铸造的代币名称，根据实际情况修改
+- '--satsbyte 30' 是设置的gas，注意这里设置的gas，与实际上链的gas是1.8~2倍的关系，比如这里设置30，实际上链gas是54~60sats/vB。
 
 >举例：实际gas是80，需要快点打上gas拉高10，按1:1.8计算，需要设置gas为90/1.8=50
 
