--- a/搭建节点.md
+++ b/搭建节点.md
@@ -47,7 +47,7 @@ yarn cli wallet-init
 ### 常用命令
 
 
-铸造FT币命令
+1、铸造FT币命令
 ```
 yarn cli mint-dft atom --satsbyte 30
 ```
@@ -56,31 +56,31 @@ yarn cli mint-dft atom --satsbyte 30
 
 >举例：实际gas是80，需要快点打上gas拉高10，按1:1.8计算，需要设置gas为90/1.8=50
 
-铸造Realm命令
+2、铸造Realm命令
 ```
 yarn cli mint-realm btc --satsbyte 30 --satsoutput 1000 --bitworkc 3165
 ```
 
-铸造图片NFT命令
+3、铸造图片NFT命令
 ```
 yarn cli mint-nft "E:\Crypto\NFT\CryptoPunks\punk0000.png" --satsbyte 30 --satsoutput 1000 --bitworkc 3165
 ```
 
 铸造命令给出后会如果代币还有的话会给出收款二维码，地址以及需要的金额，充钱进去就会开始挖矿，挖矿成功会提示success。提前充钱进去会省很多时间。
 
-查询余额命令
+4、查询余额命令
 ```
 # 查询atom余额
 npm run cli balances atom
 ```
 
-查总量
+5、查总量
 ```
 # 查询atom总量
 npm run cli location atom
 ```
 
-转移代币
+6、转移代币
 ```
 # 转移atom
 npm run cli transfer-ft atom
@@ -88,10 +88,10 @@ npm run cli transfer-ft atom
 
 ### 常见问题
 
-##### 命令卡住
+1、命令卡住
 命令卡住了按`ctrl c`终止，然后重新输入命令
 
-###### 多打
+2、多打
 1个钱包1次打一张，想多打的话可以提前准备多个钱包。
 1. 将wallet.json文件暂存到别的地方，复制atomicals文件夹，然后再将wallet.json文件转移回来
 2. 将复制的atomicals文件夹多创建几份，每个文件夹里运行`yarn cli wallet-init`命令，生成新的钱包
