--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -2,8 +2,8 @@
 
 ## 通过官网铸造代币
 
--atom官方网站：https://atomicalmarket.com/inscribe 
-satsx官方网站：https://www.satsx.io/atomicals
+- atom官方网站：https://atomicalmarket.com/inscribe 
+- satsx官方网站：https://www.satsx.io/atomicals
 
 这种方式时通过公共节点来铸造，热度高的时候很容易造成网站崩溃，不稳定。
 
