--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -80,20 +80,21 @@ yarn cli mint-nft "E:\Crypto\NFT\CryptoPunks\punk0000.png" --satsbyte 30 --satso
 4、查询余额命令
 ```
 # 查询atom余额
-npm run cli balances atom
+yarn cli balances atom
 ```
 
 5、查总量
 ```
 # 查询atom总量
-npm run cli location atom
+yarn cli location atom
 ```
 
 6、转移代币
 ```
 # 转移atom
-npm run cli transfer-ft atom
+yarn cli transfer-ft atom
 ```
+参考：https://mirror.xyz/xiaonezhalab.eth/BWpbBheadJFkjaTE4kzrwX5Yp_kLw5TAwagrfD2qFp4
 
 ### 常见问题
 
@@ -112,4 +113,26 @@ npm run cli transfer-ft atom
 
 # 搭建私有Atomicals节点
 
+>前置条件：一个2TB的SSD固态硬盘
+
+截止到2023年3月，比特币全节点的占用空间为464GB，并且每个月都会增加5-10GB，因此你需要一块容量足够的硬盘，这不只是为了满足当前的需求，我们还要为未来几年预留空间。2TB 的 SSD 硬盘价格现在已经很便宜了，请不要考虑 HDD 机械硬盘，亲测读写速度感人。在同步区块这种需要高频读写的操作中，同步所需时间能轻松飙到几个星期甚至更长，慢到你怀疑人生。
+
+## 1、同步比特币节点
+
+如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
+
+
+## 2、同步 ATOM 的索引数据
+
 atomicals-electrumx
+
+参考：
+- Atomicals-JS部署及私有节点搭建：https://mirror.xyz/cyberscavenger.eth/rayhn9RT1VMUMo4Iios3g0A6G6AtZ-EXfQ8F_kj8HhQ
+- 如何极速同步Bitcoin 全节点：https://twitter.com/weixiaoqvq/status/1716014155730465267
+- Atomicals ElectrumX 节点 Server 简易安装教程:https://twitter.com/wusimpl/status/1724769629296570724
+- nextDao方案：https://github.com/Next-DAO/atomicals-electrumx-docker
+- Atomicals RPC 本地部署简明教程：https://twitter.com/millsonzhou/status/1724366513912807472
+- https://twitter.com/dami16z/status/1724183137859797380
+- https://note.youdao.com/s/LhXcPV2k
+- https://meeting.tencent.com/user-center/shared-record-info?id=e10f9038-3038-4cb8-b45e-7f121bca1feb&from=3
+
