--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -119,8 +119,65 @@ yarn cli transfer-ft atom
 
 ## 1、同步比特币节点
 
-如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
+#### 1、下载打包好的过往比特币数据
 
+由于比特币数据比较大，如果全部用bitcoin core同步的话速度会比较慢。可以提前下载别人打包好的过往比特币数据，解压后存到数据文件夹，那么再用bitcoin core同步时这部分数据就不必同步了，直接同步剩下的数据就可以了，节省时间。
+
+打包好的节点数据（截止到2022.8）
+- https://pan.quark.cn/s/4c3b98e42c1f#/list/share
+
+在开通会员的情况下，大概9小时下载完毕。
+
+全部下载完成后，用`7-zip`解压，数据备用。
+
+#### 1、下载bitcoin core
+
+官网：https://bitcoincore.org/en/download/
+
+根据自己的操作系统下载对应压缩版本，然后解压。
+
+运行bitcoin core，找到`设置-选项`，根据下图配置
+
+![bitcoin core 配置](https://github.com/gaohongxiang/atomicals/assets/33713367/48b4ef91-387e-446e-b0f1-db4e030e992a)
+
+`bitcoin.conf`配置文件配置内容如下
+```
+# 指示比特币节点运行为完整节点（full node），允许其他节点连接并获取区块链数据
+server=1
+# 将比特币节点设置为后台运行的守护进程，而不是在命令行或图形界面中交互式地运行
+daemon=1
+# 启用事务索引（transaction index），允许比特币节点通过事务哈希快速查找和检索特定的交易。当该选项设置为 1 时，比特币节点会从第一个区块开始索引所有的交易
+txindex=1
+# 配置 ZeroMQ 发布原始区块数据的地址和端口。ZeroMQ 是一种消息传递库，用于在比特币网络中实时传输数据。
+zmqpubrawblock=tcp://127.0.0.1:28332
+zmqpubrawtx=tcp://127.0.0.1:28333
+
+用于比特币节点的远程过程调用（RPC）身份验证的用户名和密码
+rpcuser=<自行替换>
+rpcpassword=<自行替换>
+
+# 添加大陆节点确保稳定极速同步
+# 大陆节点查找：https://bitnodes.io/nodes/?q=China
+addnode = 120.79.71.72:8333
+addnode = 175.27.222.132:8333
+addnode = 42.231.189.65:8333
+addnode = 194.156.99.41:10001
+addnode = 124.222.39.240:8333
+addnode = 27.148.206.140:8333
+
+# 通过rpcbind=0.0.0.0和rpcallowip的设置灵活控制IP地址对节点 RPC 接口的访问，以增加安全性。
+# 指定比特币节点监听的 RPC 绑定地址。设置为 0.0.0.0 表示节点将接受来自所有网络接口的连接请求。换句话说，它允许从任意 IP 地址访问节点的 RPC 接口
+rpcbind=0.0.0.0
+# rpcallowip指定允许访问节点 RPC 接口的 IP 地址。
+# 设置为 127.0.0.1 表示允许本地主机访问节点的 RPC 接口，即只有在同一台机器上运行的程序可以连接和调用节点的 RPC
+rpcallowip=127.0.0.1
+# 设置为 192.168.0.0/16 表示允许具有以 192.168 开头的局域网 IP 地址的设备连接和调用节点的 RPC 接口。这通常包括您的本地网络中的设备
+rpcallowip=192.168.0.0/16
+# 设置为 172.0.0.0/8 表示允许具有以 172 开头的默认 Docker 容器网络 IP 地址的设备连接和调用节点的 RPC 接口
+rpcallowip=172.0.0.0/8
+```
+
+配置好后重启bitcoin core生效。
 
 ## 2、同步 ATOM 的索引数据
 
@@ -128,6 +185,7 @@ atomicals-electrumx
 
 参考：
 - Atomicals-JS部署及私有节点搭建：https://mirror.xyz/cyberscavenger.eth/rayhn9RT1VMUMo4Iios3g0A6G6AtZ-EXfQ8F_kj8HhQ
+- 如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
 - 如何极速同步Bitcoin 全节点：https://twitter.com/weixiaoqvq/status/1716014155730465267
 - Atomicals ElectrumX 节点 Server 简易安装教程:https://twitter.com/wusimpl/status/1724769629296570724
 - nextDao方案：https://github.com/Next-DAO/atomicals-electrumx-docker
