--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -117,7 +117,7 @@ yarn cli transfer-ft atom
 
 截止到2023年3月，比特币全节点的占用空间为464GB，并且每个月都会增加5-10GB，因此你需要一块容量足够的硬盘，这不只是为了满足当前的需求，我们还要为未来几年预留空间。2TB 的 SSD 硬盘价格现在已经很便宜了，请不要考虑 HDD 机械硬盘，亲测读写速度感人。在同步区块这种需要高频读写的操作中，同步所需时间能轻松飙到几个星期甚至更长，慢到你怀疑人生。
 
-## 1、同步比特币节点
+## 一、同步比特币节点
 
 #### 1、下载打包好的过往比特币数据
 
@@ -130,13 +130,22 @@ yarn cli transfer-ft atom
 
 全部下载完成后，用`7-zip`解压，数据备用。
 
-#### 1、下载bitcoin core
+#### 2、下载bitcoin core并配置
 
 官网：https://bitcoincore.org/en/download/
 
-根据自己的操作系统下载对应压缩版本，然后解压。
+根据自己的操作系统下载对应压缩版本，然后解压，并移动到自己的移动硬盘中
 
-运行bitcoin core，找到`设置-选项`，根据下图配置
+```
+进入解压缩文件，创建数据存储文件夹，比如 bitcoin_data，后续所有的数据都存在这个文件夹里。
+```
+
+运行bitcoin core，初次运行要选择比特币数据存锤位置，这里存储在自己的移动硬盘中。即刚创建的数据文件夹`bitcoin_data`。
+
+![选择数据存储位置](https://github.com/gaohongxiang/atomicals/assets/33713367/93b28d24-4c32-40a7-a1fb-f1df5df62ab6)
+
+
+找到`设置-选项`，根据下图配置
 
 ![bitcoin core 配置](https://github.com/gaohongxiang/atomicals/assets/33713367/48b4ef91-387e-446e-b0f1-db4e030e992a)
 
@@ -179,7 +188,17 @@ rpcallowip=172.0.0.0/8
 
 配置好后重启bitcoin core生效。
 
-## 2、同步 ATOM 的索引数据
+#### 3、移动打包好的数据
+
+将第一步下载的打包好的比特币数据移动到`bitcoin_data`文件夹下，替换掉`blocks`和`chainstate`这两个文件夹。
+
+![image](https://github.com/gaohongxiang/atomicals/assets/33713367/cec0eae5-f0f8-42eb-b19c-cbe95d68f973)
+
+#### 4、同步比特币数据
+
+再次打开bitcoin core软件，数据开始同步，可以看到，我们下载好的数据不需要重新同步了，只需要同步剩下的数据就好了，耐心等待，需要几个小时才能同步完。同步完成后就有了比特币全节点数据！
+
+## 二、同步 ATOM 的索引数据
 
 atomicals-electrumx
 
