--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -164,6 +164,8 @@ zmqpubrawtx=tcp://127.0.0.1:28333
 用于比特币节点的远程过程调用（RPC）身份验证的用户名和密码
 rpcuser=<自行替换>
 rpcpassword=<自行替换>
+# 更安全的验证方式是用rpcauth，如下
+# rpcauth=electrumx:XXX
 
 # 添加大陆节点确保稳定极速同步
 # 大陆节点查找：https://bitnodes.io/nodes/?q=China
@@ -200,7 +202,40 @@ rpcallowip=172.0.0.0/8
 
 ## 二、同步 ATOM 的索引数据
 
-atomicals-electrumx
+#### 1、安装docker
+
+官网：https://www.docker.com/
+
+注册并登录
+
+#### 2、拉取atomicals-electrumx-docker并配置
+
+```
+git clone https://github.com/Next-DAO/atomicals-electrumx-docker.git
+```
+在atomicals-electrumx-docker目录创建`.env`文件
+
+内容如下
+```
+DAEMON_URL=用户名:密码@<ip>:8332
+```
+把<ip>换成你比特币全节点所在的ip，如果在本地或者同一个机器，ip就填localhost或者127.0.0.1
+
+下载对应的docker镜像
+```
+docker-compose pull
+```
+启动镜像
+```
+docker-compose up -d
+```
+
+打印日志查看区块同步进度
+```
+docker-compose logs -f
+```
+只有等区块完全同步了才能开始用
+
 
 参考：
 - Atomicals-JS部署及私有节点搭建：https://mirror.xyz/cyberscavenger.eth/rayhn9RT1VMUMo4Iios3g0A6G6AtZ-EXfQ8F_kj8HhQ
