--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -117,6 +117,9 @@ yarn cli transfer-ft atom
 
 截止到2023年3月，比特币全节点的占用空间为464GB，并且每个月都会增加5-10GB，因此你需要一块容量足够的硬盘，这不只是为了满足当前的需求，我们还要为未来几年预留空间。2TB 的 SSD 硬盘价格现在已经很便宜了，请不要考虑 HDD 机械硬盘，亲测读写速度感人。在同步区块这种需要高频读写的操作中，同步所需时间能轻松飙到几个星期甚至更长，慢到你怀疑人生。
 
+![image](https://github.com/gaohongxiang/atomicals/assets/33713367/92bbf577-6a06-4722-9ecd-1229eea598bd)
+
+
 ## 一、同步比特币节点
 
 #### 1、下载打包好的过往比特币数据
@@ -237,6 +240,26 @@ docker-compose logs -f
 只有等区块完全同步了才能开始用
 
 
+使用方法
+1、关闭/停止Docker；
+
+2、把原electrumx-data文件内的已有数据删除；
+
+3、把下载好的文件解压缩到electrumx-data文件夹；
+
+4、重启Docker（还需要一小段时间同步至最新高度）；
+
+大家可以关注下 @theNextDAO 的 @millsonzhou 老哥。
+
+推荐使用qBittorrent工具下载。
+
+磁力链接：
+```
+magnet:?xt=urn:btih:7KW5OXSWUQ2EFF57URE42GBRL2XCN5AI&dn=ElectrumX-Data-20231114&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=https%3A%2F%2Ftracker2.ctix.cn%3A443%2Fannounce&tr=https%3A%2F%2Ftracker1.520.jp%3A443%2Fannounce&tr=udp%3A%2F%2Fopen.tracker.cl%3A1337%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.demonii.com%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker1.bt.moack.co.kr%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker-udp.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2Fexplodie.org%3A6969%2Fannounce&tr=https%3A%2F%2Ftracker.gbitt.info%3A443%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fuploads.gamecoast.net%3A6969%2Fannounce
+```
+
+
+
 参考：
 - Atomicals-JS部署及私有节点搭建：https://mirror.xyz/cyberscavenger.eth/rayhn9RT1VMUMo4Iios3g0A6G6AtZ-EXfQ8F_kj8HhQ
 - 如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
@@ -244,6 +267,8 @@ docker-compose logs -f
 - Atomicals ElectrumX 节点 Server 简易安装教程:https://twitter.com/wusimpl/status/1724769629296570724
 - nextDao方案：https://github.com/Next-DAO/atomicals-electrumx-docker
 - Atomicals RPC 本地部署简明教程：https://twitter.com/millsonzhou/status/1724366513912807472
+- Atomicals私有节点数据下载磁力链接：https://mirror.xyz/cyberscavenger.eth/bjOEWmZt_LaQsvDj2o8_uO_X0SXdaT4S51Tfr0gva0g
+- Atomicals 前景及应用研讨会 RPC 节点相关链接：https://twitter.com/millsonzhou/status/1725498224352591897
 - https://twitter.com/dami16z/status/1724183137859797380
 - https://note.youdao.com/s/LhXcPV2k
 - https://meeting.tencent.com/user-center/shared-record-info?id=e10f9038-3038-4cb8-b45e-7f121bca1feb&from=3
