--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -1,15 +1,38 @@
-# 铸造代币
+铸造代币有三种参与方式
+1. 通过代打平台铸造代币
+2. 通过客户端cli（atomicals-js）+ 公共RPC节点 铸造代币
+3. 通过客户端cli（atomicals-js）+ 私有RPC节点 铸造代币
 
-## 通过官网铸造代币
+
+操作难易程度：1 > 2 > 3
+```
+方式1只需要打开代打平台官网，连接钱包就可以打
+方式2需要有一定编程基础
+方式3不仅需要编程基础，还需要硬件设备支持，比如cpu、固态硬盘等
+```
+
+铸造成功率：3 > 2 > 1
+```
+方式1受限于代打平台的稳定性和公共rpc的可靠性。往往热门项目铸造时代打平台承载不了大流量导致官网打不开，同样流量大时公共rpc节点也会挂掉
+方式2受限于大流量导致公共rpc挂掉
+方式3基本不受限
+```
+
+# 一、通过代打平台铸造代币
 
 - atom官方网站：https://atomicalmarket.com/inscribe 
 - satsx官方网站：https://www.satsx.io/atomicals
 
-这种方式时通过公共节点来铸造，热度高的时候很容易造成网站崩溃，不稳定。
+# 二、通过客户端cli（atomicals-js）+ 公共RPC节点 铸造代币
 
-## 通过atomicals-js铸造代币
+项目依赖
+- node
+- git
+- 客户端cli（atomicals-js）
 
-### 安装node
+>注：命令都是在终端中执行的，win下的终端如`cmd`、`PowerShell`都需要右键以管理员身份打开，否则容易权限不足
+
+### 1、安装node
 
 https://nodejs.org/en
 
@@ -18,7 +41,7 @@ https://nodejs.org/en
 node -v
 ```
 
-### 安装git
+### 2、安装git
 
 https://git-scm.com/downloads
 
@@ -27,7 +50,7 @@ https://git-scm.com/downloads
 git -v
 ```
 
-### 克隆并编译atomicals-js项目
+### 3、克隆并编译atomicals-js项目
 
 ```
 # 创建工作目录
@@ -46,15 +69,28 @@ npm run build
 npm install -g yarn
 ```
 
-### 创建钱包
+### 4、创建钱包
 ```
 yarn cli wallet-init
 ```
 执行创建钱包命令后会在当前目录下会生成 wallet.json 钱包信息，注意保存好 wallet.json 钱包文件
 >说明：创建钱包后，会自动生成2个地址，Primary Address和Funding Address，其中Primary是用于接收Atomicals生态资产的，比如ARC20代币、图片NFT等，Funding是用于铸造（挖矿）过程的中转钱包，通常是往Funding地址中存入相应数量的BTC，用于铸造。可以提前充值进去。
 
-### 常用命令
+### 常见问题
 
+1、命令卡住
+
+命令卡住了按`ctrl c`终止，然后重新输入命令
+
+2、多打
+
+1个钱包1次打一张，想多打的话可以提前准备多个钱包。
+1. 将wallet.json文件暂存到别的地方，复制atomicals文件夹，然后再将wallet.json文件转移回来
+2. 将复制的atomicals文件夹多创建几份，每个文件夹里运行`yarn cli wallet-init`命令，生成新的钱包
+3. 给钱包转钱
+4. 每个atomicals文件夹开一个终端，铸造代币
+
+### 常用命令
 
 1、铸造FT币命令
 ```
@@ -96,26 +132,20 @@ yarn cli transfer-ft atom
 ```
 参考：https://mirror.xyz/xiaonezhalab.eth/BWpbBheadJFkjaTE4kzrwX5Yp_kLw5TAwagrfD2qFp4
 
-### 常见问题
 
-1、命令卡住
+# 三、通过客户端cli（atomicals-js）+ 私有RPC节点 铸造代币
 
-命令卡住了按`ctrl c`终止，然后重新输入命令
+客户端cli部分同上。这部分重点介绍搭建私有Atomicals RPC节点。
 
-2、多打
+## 搭建私有Atomicals RPC节点
 
-1个钱包1次打一张，想多打的话可以提前准备多个钱包。
-1. 将wallet.json文件暂存到别的地方，复制atomicals文件夹，然后再将wallet.json文件转移回来
-2. 将复制的atomicals文件夹多创建几份，每个文件夹里运行`yarn cli wallet-init`命令，生成新的钱包
-3. 给钱包转钱
-4. 每个atomicals文件夹开一个终端，铸造代币
+项目依赖
+- 一台cpu好点的电脑，一个2TB的SSD固态硬盘（挖矿靠cpu，存储读写数据靠ssd固态硬盘。目前比特币全节点数据464GB，2TB预留未来空间）
+- docker
+- btc全节点（bitcoin core）
+- atomicals-electrumx
+- electrumx-proxy
 
-
-# 搭建私有Atomicals节点
-
->前置条件：一个2TB的SSD固态硬盘
-
-截止到2023年3月，比特币全节点的占用空间为464GB，并且每个月都会增加5-10GB，因此你需要一块容量足够的硬盘，这不只是为了满足当前的需求，我们还要为未来几年预留空间。2TB 的 SSD 硬盘价格现在已经很便宜了，请不要考虑 HDD 机械硬盘，亲测读写速度感人。在同步区块这种需要高频读写的操作中，同步所需时间能轻松飙到几个星期甚至更长，慢到你怀疑人生。
 
 ![image](https://github.com/gaohongxiang/atomicals/assets/33713367/92bbf577-6a06-4722-9ecd-1229eea598bd)
 
