--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -140,7 +140,7 @@ yarn cli transfer-ft atom
 ## 搭建私有Atomicals RPC节点
 
 项目依赖
-- 一台cpu好点的电脑，一个2TB的SSD固态硬盘（挖矿靠cpu，存储读写数据靠ssd固态硬盘。目前比特币全节点数据464GB，2TB预留未来空间）
+- 一台cpu好点的电脑，一个2T的SSD固态硬盘（挖矿靠cpu，存储读写数据靠ssd固态硬盘。目前比特币全节点数据608G，electrumx数据94G，2T预留未来空间）
 - docker
 - btc全节点（bitcoin core）
 - atomicals-electrumx
