--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -146,24 +146,30 @@ yarn cli transfer-ft atom
 - atomicals-electrumx
 - electrumx-proxy
 
-
 ![image](https://github.com/gaohongxiang/atomicals/assets/33713367/92bbf577-6a06-4722-9ecd-1229eea598bd)
+
+#### 准备工作
+由于比特币全节点数据和electrumx数据都非常大，从头开始同步的话会很慢，所以，我们可以提前下载别人打包好的数据，然后只需要同步后面新产生的数据就好了。这样会节省很多时间。
+
+打包好的比特币节点数据（截止到2022.8）
+- https://pan.quark.cn/s/4c3b98e42c1f#/list/share
+
+在开通夸克网盘会员的情况下，大概9小时下载完毕。
+
+
+打包好的electrumx数据磁力链接（推荐使用qBittorrent工具下载）
+```
+magnet:?xt=urn:btih:7KW5OXSWUQ2EFF57URE42GBRL2XCN5AI&dn=ElectrumX-Data-20231114&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=https%3A%2F%2Ftracker2.ctix.cn%3A443%2Fannounce&tr=https%3A%2F%2Ftracker1.520.jp%3A443%2Fannounce&tr=udp%3A%2F%2Fopen.tracker.cl%3A1337%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.demonii.com%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker1.bt.moack.co.kr%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker-udp.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2Fexplodie.org%3A6969%2Fannounce&tr=https%3A%2F%2Ftracker.gbitt.info%3A443%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fuploads.gamecoast.net%3A6969%2Fannounce
+```
+
+两个数据全部下载完成后，用`7-zip`解压，数据备用。
+
+>解压后比特币数据包含`blocks`、`chainstate`两个文件夹。electruumx-data包含三个文件夹三个文件。
 
 
 ## 一、同步比特币节点
 
-#### 1、下载打包好的过往比特币数据
-
-由于比特币数据比较大，如果全部用bitcoin core同步的话速度会比较慢。可以提前下载别人打包好的过往比特币数据，解压后存到数据文件夹，那么再用bitcoin core同步时这部分数据就不必同步了，直接同步剩下的数据就可以了，节省时间。
-
-打包好的节点数据（截止到2022.8）
-- https://pan.quark.cn/s/4c3b98e42c1f#/list/share
-
-在开通会员的情况下，大概9小时下载完毕。
-
-全部下载完成后，用`7-zip`解压，数据备用。
-
-#### 2、下载bitcoin core并配置
+#### 1、下载bitcoin core并配置
 
 官网：https://bitcoincore.org/en/download/
 
@@ -223,13 +229,13 @@ rpcallowip=172.0.0.0/8
 
 配置好后重启bitcoin core生效。
 
-#### 3、移动打包好的数据
+#### 2、移动打包好的数据
 
 将第一步下载的打包好的比特币数据移动到`bitcoin_data`文件夹下，替换掉`blocks`和`chainstate`这两个文件夹。
 
 ![image](https://github.com/gaohongxiang/atomicals/assets/33713367/cec0eae5-f0f8-42eb-b19c-cbe95d68f973)
 
-#### 4、同步比特币数据
+#### 3、同步比特币数据
 
 再次打开bitcoin core软件，数据开始同步，可以看到，我们下载好的数据不需要重新同步了，只需要同步剩下的数据就好了，耐心等待，需要几个小时才能同步完。同步完成后就有了比特币全节点数据！
 
@@ -246,6 +252,7 @@ rpcallowip=172.0.0.0/8
 ```
 git clone https://github.com/Next-DAO/atomicals-electrumx-docker.git
 ```
+
 在atomicals-electrumx-docker目录创建`.env`文件
 
 内容如下
@@ -254,7 +261,17 @@ DAEMON_URL=用户名:密码@<ip>:8332
 ```
 把<ip>换成你比特币全节点所在的ip，如果在本地或者同一个机器，ip就填localhost或者127.0.0.1
 
-下载对应的docker镜像
+
+在atomicals-electrumx-proxy-docker项目下载docker-compose.yml文件，并替换文件夹内现有的同名文件
+```
+https://github.com/Next-DAO/atomicals-electrumx-proxy-docker
+```
+
+删除 data 文件夹，将下载好的electrumx-data文件夹移动过来
+
+上面3步操作完成后重启电脑
+
+#### 3、下载对应的docker镜像
 ```
 docker-compose pull
 ```
@@ -269,37 +286,67 @@ docker-compose logs -f
 ```
 只有等区块完全同步了才能开始用
 
+通过 docker logs --since 1m -f electrumx 查看索引进度，需要持续至少两天
 
-使用方法
-1、关闭/停止Docker；
+#### 替换客户端cli（atomicals-js）的RPC节点
 
-2、把原electrumx-data文件内的已有数据删除；
 
-3、把下载好的文件解压缩到electrumx-data文件夹；
-
-4、重启Docker（还需要一小段时间同步至最新高度）；
-
-大家可以关注下 @theNextDAO 的 @millsonzhou 老哥。
-
-推荐使用qBittorrent工具下载。
-
-磁力链接：
+检查本地节点状态：在浏览器地址栏输入 
 ```
-magnet:?xt=urn:btih:7KW5OXSWUQ2EFF57URE42GBRL2XCN5AI&dn=ElectrumX-Data-20231114&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=https%3A%2F%2Ftracker2.ctix.cn%3A443%2Fannounce&tr=https%3A%2F%2Ftracker1.520.jp%3A443%2Fannounce&tr=udp%3A%2F%2Fopen.tracker.cl%3A1337%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.demonii.com%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker1.bt.moack.co.kr%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.moeking.me%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker-udp.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2Fexplodie.org%3A6969%2Fannounce&tr=https%3A%2F%2Ftracker.gbitt.info%3A443%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=udp%3A%2F%2Fuploads.gamecoast.net%3A6969%2Fannounce
+http://127.0.0.1:8080/proxy/health
+```
+如果返回 “success”：true 则表示节点运行正常，等待区块数据同步后即可正常使用。
+
+
+打开atomicals-js文件夹里的.env文件，替换原有节点URL为：
+```
+ELECTRUMX_PROXY_BASE_URL=http://localhost:8080/proxy
 ```
 
+至此私有节点搭建完毕。
+
+#### 常用命令
+
+检查electrumx是否准备就绪
+
+docker-compose ps
+
+使用cmd查看进度
+
+docker-compose logs -f
+
+关闭服务器
+
+docker-compose down
 
 
-参考：
+
+
+
+创建electrumx目录并进入
+```
+mkdir electrumx && cd electrumx
+```
+
+安装 electrumx（ 将下列命令中的 `192.168.50.123` 改成你的ip）
+```
+docker run -it --name electrumx -p 50001:50001 -e DAEMON_URL=nextdao:nextdao@192.168.50.123:8332 -v $(pwd):/data -d lucky2077/atomicals-electrumx:latest
+```
+
+安装 electrumx-proxy
+```
+docker run -it --name electrumx-proxy -p 8080:8080 -e ELECTRUMX_HOST=192.168.50.123 -d lucky2077/atomicals-electrumx-proxy:latest
+```
+
+
+## 参考
 - Atomicals-JS部署及私有节点搭建：https://mirror.xyz/cyberscavenger.eth/rayhn9RT1VMUMo4Iios3g0A6G6AtZ-EXfQ8F_kj8HhQ
-- 如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
-- 如何极速同步Bitcoin 全节点：https://twitter.com/weixiaoqvq/status/1716014155730465267
 - Atomicals ElectrumX 节点 Server 简易安装教程:https://twitter.com/wusimpl/status/1724769629296570724
 - nextDao方案：https://github.com/Next-DAO/atomicals-electrumx-docker
 - Atomicals RPC 本地部署简明教程：https://twitter.com/millsonzhou/status/1724366513912807472
+- Atomicals 前景及应用研讨会 RPC 节点相关链接：https://twitter.com/millsonzhou/status/1725498209014059466
+- 如何搭建 Bitcoin Core 比特币全节点：https://yishi.io/how-to-run-bitcoin-full-node/
+- 如何极速同步Bitcoin 全节点：https://twitter.com/weixiaoqvq/status/1716014155730465267
 - Atomicals私有节点数据下载磁力链接：https://mirror.xyz/cyberscavenger.eth/bjOEWmZt_LaQsvDj2o8_uO_X0SXdaT4S51Tfr0gva0g
-- Atomicals 前景及应用研讨会 RPC 节点相关链接：https://twitter.com/millsonzhou/status/1725498224352591897
-- https://twitter.com/dami16z/status/1724183137859797380
-- https://note.youdao.com/s/LhXcPV2k
-- https://meeting.tencent.com/user-center/shared-record-info?id=e10f9038-3038-4cb8-b45e-7f121bca1feb&from=3
+
 
