--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -200,7 +200,7 @@ txindex=1
 zmqpubrawblock=tcp://127.0.0.1:28332
 zmqpubrawtx=tcp://127.0.0.1:28333
 
-用于比特币节点的远程过程调用（RPC）身份验证的用户名和密码
+# 用于比特币节点的远程过程调用（RPC）身份验证的用户名和密码
 rpcuser=<自行替换>
 rpcpassword=<自行替换>
 # 更安全的验证方式是用rpcauth，如下
