--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -241,63 +241,69 @@ rpcallowip=172.0.0.0/8
 
 ## 二、同步 ATOM 的索引数据
 
-#### 1、安装docker
+### 1、安装docker
 
 官网：https://www.docker.com/
 
 注册并登录
 
-#### 2、拉取atomicals-electrumx-docker并配置
+### 2、拉取atomicals-electrumx-docker并配置
 
+##### 2.1 拉取atomicals-electrumx-docker
 ```
 git clone https://github.com/Next-DAO/atomicals-electrumx-docker.git
 ```
 
-在atomicals-electrumx-docker目录创建`.env`文件
+##### 2.2 在atomicals-electrumx-docker目录下创建`.env`文件
 
 内容如下
 ```
 DAEMON_URL=用户名:密码@<ip>:8332
 ```
-把<ip>换成你比特币全节点所在的ip，如果在本地或者同一个机器，ip就填localhost或者127.0.0.1
+用户名密码跟bitcoin配置文件一致。ip换成你比特币全节点所在的ip，如果在本地或者同一个机器，ip就填localhost或者127.0.0.1
 
-
+##### 2.3 替换docker-compose.yml文件
 在atomicals-electrumx-proxy-docker项目下载docker-compose.yml文件，并替换文件夹内现有的同名文件
 ```
 https://github.com/Next-DAO/atomicals-electrumx-proxy-docker
 ```
 
-删除 data 文件夹，将下载好的electrumx-data文件夹移动过来
+##### 2.4 移动electrumx数据
+
+将下载好的electrumx-data文件夹移动到tomicals-electrumx-docker目录
 
 上面3步操作完成后重启电脑
 
-#### 3、下载对应的docker镜像
+
+### 3、docker镜像
+
+##### 3.1 拉取镜像
 ```
 docker-compose pull
 ```
-启动镜像
+##### 3.2 启动镜像
 ```
 docker-compose up -d
 ```
 
-打印日志查看区块同步进度
+##### 3.3 打印日志查看区块同步进度
 ```
 docker-compose logs -f
 ```
+
 只有等区块完全同步了才能开始用
 
-通过 docker logs --since 1m -f electrumx 查看索引进度，需要持续至少两天
 
-#### 替换客户端cli（atomicals-js）的RPC节点
+### 4、替换客户端cli（atomicals-js）的RPC节点
 
 
-检查本地节点状态：在浏览器地址栏输入 
+##### 4.1 检查本地节点状态：在浏览器地址栏输入 
 ```
 http://127.0.0.1:8080/proxy/health
 ```
 如果返回 “success”：true 则表示节点运行正常，等待区块数据同步后即可正常使用。
 
-
+##### 4.2 替换PRC节点
 打开atomicals-js文件夹里的.env文件，替换原有节点URL为：
 ```
 ELECTRUMX_PROXY_BASE_URL=http://localhost:8080/proxy
@@ -305,7 +311,7 @@ ELECTRUMX_PROXY_BASE_URL=http://localhost:8080/proxy
 
 至此私有节点搭建完毕。
 
-#### 常用命令
+### 常用命令
 
 检查electrumx是否准备就绪
 
