--- a/铸造代币&&搭建节点.md
+++ b/铸造代币&&搭建节点.md
@@ -326,23 +326,12 @@ docker-compose logs -f
 docker-compose down
 
 
+### 常见错误
 
-
-
-创建electrumx目录并进入
 ```
-mkdir electrumx && cd electrumx
+ERROR:Daemon:connection problem - check your daemon is running.  Retrying occasionally...
 ```
 
-安装 electrumx（ 将下列命令中的 `192.168.50.123` 改成你的ip）
-```
-docker run -it --name electrumx -p 50001:50001 -e DAEMON_URL=nextdao:nextdao@192.168.50.123:8332 -v $(pwd):/data -d lucky2077/atomicals-electrumx:latest
-```
-
-安装 electrumx-proxy
-```
-docker run -it --name electrumx-proxy -p 8080:8080 -e ELECTRUMX_HOST=192.168.50.123 -d lucky2077/atomicals-electrumx-proxy:latest
-```
 
 
 ## 参考
